navigation bar complete with queries. queries backward but functional

--- a/landing.html
+++ b/landing.html
@@ -7,23 +7,29 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Styles and Fonts -->
         <link rel="stylesheet" href="landing.css">
+        <script src="https://kit.fontawesome.com/e661076866.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
         <script src="js/nav.js" asy></script>
         <title>Lost Boys & Girls Foundation</title>
     </head>
 
     <body>
-        
+    
         <!-- navbar --> 
         <nav>
-            <div>
-                <a href="index.html">Home</a>
-                <a href="#">Team</a>
-                <a href="#">Login</a>
-                <a href="mailto:kellyann.nason@gmail.com?subject=NOT A REAL EMAIL!" target="_blank">Contact</a>
-            </div>
+            <label class = "logo">LB&G</label>
+            <ul>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="mailto:kellyann.nason@gmail.com?subject=NOT A REAL EMAIL!" target="_blank">Contact</a></li>
+            </ul>
+            <label id="icon">
+                <i class="fa-solid fa-bars"></i>
+            </label>
         </nav>
         <header>
-        <img src="images/bigLogo.png" class="head-img">
+        <img src="images/ringside.jpeg" class="head-img">
         </header>
 
         <!-- Intro -->
