initial styles added for mobile view

--- a/landing.html
+++ b/landing.html
@@ -19,7 +19,7 @@
         <nav>
             <label class = "logo">LB&G</label>
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Login</a></li>
                 <li><a href="mailto:kellyann.nason@gmail.com?subject=NOT A REAL EMAIL!" target="_blank">Contact</a></li>
@@ -29,7 +29,7 @@
             </label>
         </nav>
         <header>
-        <img src="images/ringside.jpeg" class="head-img">
+        <img src="images/bigLogo.png" class="head-img">
         </header>
 
         <!-- Intro -->
@@ -82,7 +82,7 @@
                 <!-- Personal Training --> 
                 <div class='column'>
                     <div class='pt-txt'>
-                        <h2>Personal Traing</h2>
+                        <h2>Personal Training</h2>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                             Sapiente blanditiis eos minima sit facere alias doloremque quaerat 
