--- a/landing.html
+++ b/landing.html
@@ -56,7 +56,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Eius, voluptatum vero nihil, recusandae voluptatibus nisi eveniet 
                             aspernatur quisquam quae eos accusantium blanditiis quo non, hic consectetur 
-                            laboriosam neque inventore repellat?
+                            laboriosam neque inventore repellat
                         </p>
                     </div>
                 </div>
