some lorem ipsum removed. grow animation added to button

--- a/landing.html
+++ b/landing.html
@@ -38,7 +38,7 @@
             <p>
                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                Laboriosam at ex esse quo, consequatur necessitatibus molestias impedit explicabo,
-               ratione rem mollitia saepe odit, neque minima libero quae nihil id deleniti?
+               ratione rem mollitia saepe odit, neque minima?
             </p>
         </div>
 
@@ -56,7 +56,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Eius, voluptatum vero nihil, recusandae voluptatibus nisi eveniet 
                             aspernatur quisquam quae eos accusantium blanditiis quo non, hic consectetur 
-                            laboriosam neque inventore repellat
+                            laboriosam?
                         </p>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                             Perferendis nemo nesciunt similique voluptas sequi itaque mollitia sed officia in. 
-                            Facere quas vero repellendus fugit accusantium, recusandae explicabo aspernatur pariatur aliquid?
+                            Facere quas vero repellendus fugit accusantium, recusandae explicabo aspernatur?
                         </p>
                     </div>
                 </div>
@@ -86,8 +86,7 @@
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                             Sapiente blanditiis eos minima sit facere alias doloremque quaerat 
-                            explicabo eveniet hic consequuntur deleniti, voluptatibus earum repellat odio 
-                            quae dignissimos, omnis esse.
+                            explicabo eveniet hic consequuntur deleniti, voluptatibus earum repellat odio.
                         </p>
                     </div>
                 </div>
@@ -106,7 +105,7 @@
                 dicta tempora consectetur maiores quaerat id enim deserunt error cupiditate 
                 voluptatum eligendi. 
             </p>
-            <button>
+            <button class="grow">
                 <a href="#">
                 Lets Go!
                 </a>
