changed png to avif format

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </label>
         </nav>
         <header>
-        <img src="images/bigLogo.png" class="head-img">
+        <img src="images/bigLogo.avif" class="head-img">
         </header>
 
         <!-- Intro -->
